--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,7 +49,7 @@
     <string name="title_forgot_password">Forgot your password</string>
     <string name="subtitle_enter_exist_email">Enter an existing email address.</string>
     <string name="subtitle_enter_new_pass">Enter a new password and verification code.</string>
-    <string name="hint_resend_code">Code verification resend in ... 02:00</string>
+    <string name="hint_resend_code">Code verification resend in … 02:00</string>
     <string name="hint_username_uid">Username #0000</string>
     <string name="hint_email_profile">*****@gmail.com</string>
     <string name="action_edit_profile">Edit Profile</string>
@@ -69,4 +69,9 @@
     <string name="subtitle_enable_two">Enter the verification code to enable two factor auth.</string>
     <string name="title_internal_server_error">Internal\nServer Error</string>
     <string name="subtitle_internal_server_error">The server encountered an error and \ncould not complete your request.</string>
+    <string name="title_verify_change_email">Verify Change Email Address</string>
+    <string name="hint_new_email">New Email</string>
+    <string name="title_empty_todolist">No TodoList</string>
+    <string name="subtitle_empty_todolist">You have not created any Todo.\nTap the button to add your first Todo.</string>
+    <string name="action_add_new_todo">Add New Todo</string>
 </resources>
